<resources>
    <string name="app_name">Shopping list</string>
    <string name="create_new_shopping_list">create new shopping list</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="shopping_list">Shopping list</string>
    <string name="welcome_to_shopping_lists_app">Welcome to shopping lists app!</string>
    <string name="create_new_account">Create new account</string>
    <string name="import_account_by_id">Import account by id</string>
    <string name="id" translatable="false">id</string>
    <string name="log_in">Log in</string>
    <string name="log_out">log out</string>
    <string name="internet_error">Internet error</string>
    <string name="wring_shopping_list_id">Wring shopping list id!</string>
    <string name="copy_account_id">Copy account id</string>
    <string name="list_name">list_name</string>
    <string name="add_new_item">Add new item</string>
    <string name="add">Add</string>
    <string name="count">Count</string>
    <string name="shoplistname">ShopListName</string>
    <string name="title">title</string>
    <string name="hint" translatable="false">hint</string>
    <string name="button_text" translatable="false">button text</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_text">Confirm text</string>
    <string name="itemname">itemName</string>
    <string name="do_you_want_to_remove">"Do you want to remove "</string>
    <string name="my_shopping_lists">My shopping lists</string>
    <string name="no_internet_please_try_again">no internet. please try again!</string>
    <string name="try_again">Try again</string>
    <string name="no_lists_please_create_th_first">No shopping lists. Please create the first!</string>
    <string name="shopping_list_is_empty">Shopping list is empty!</string>
    <string name="email" translatable="false">Email</string>
    <string name="create_account">Create account</string>
    <string name="phone">Phone</string>
    <string name="your_account_id">Your account id:</string>
    <string name="card_code">card code</string>
    <string name="card_name">card name</string>
    <string name="my_cards">My cards</string>
    <string name="my_discount_cards">My discount cards</string>
    <string name="no_cards_please_add_the_first">No cards. Please add the first!</string>
    <string name="add_new_card">Add new card</string>
    <string name="number">Number</string>
    <string name="fill_all_fields">fill all fields!</string>
    <string name="close">Close</string>
    <string name="create_by_qr">Create by QR</string>
    <string name="unknown">unknown</string>
    <string name="create_by_number">Create by number</string>
    <string name="clear_cards">Clear cards</string>
    <string name="do_you_want_to_delete_card">Do you want to delete card?</string>
    <string name="search">Search…</string>
    <string name="write_correct_email">Write correct email!</string>
    <string name="edit">Edit</string>
    <string name="ok" translatable="false">OK</string>
    <string name="recent_tokens">Recent access:</string>
</resources>